# transpiling_python_to_python_talk

./: .gitignore  deck.mdx  package.json  pyproject.toml  requirements_dev.txt
.github/: dependabot.yml
.github/workflows/: main.yml
snippets/: assignment_anatomy_no_types.txt  assignment_anatomy_with_types.txt  astor_parse_generate.py  babel_example.js  strip_annotations_map.txt  transform_strip_annotations.py  transform_strip_annotations_test.py
